# My3DViewer

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: GeometryPrimitives.cpp  GeometryPrimitives.hpp  OpenglRenderSystem.hpp  Vertex.hpp  ViewerWindow.cpp  ViewerWindow.hpp  main.cpp
